# bubseek

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  objects.inv  pdm_build.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
architecture/: index.html
configuration/: index.html
contrib/bub-schedule-sqlalchemy/: README.md  pyproject.toml
contrib/bub-schedule-sqlalchemy/src/bub_schedule_sqlalchemy/: __init__.py  channel.py  job_store.py  jobs.py  plugin.py  tools.py
contrib/bub-schedule-sqlalchemy/src/tests/: test_bub_schedule_sqlalchemy.py
contrib/bubseek-dingtalk/: README.md  pyproject.toml
contrib/bubseek-dingtalk/src/bubseek_dingtalk/: channel.py
contrib/bubseek-langchain/: README.md  pyproject.toml
contrib/bubseek-langchain/src/bubseek_langchain/: __init__.py  agent_protocol.py  bridge.py  config.py  errors.py  loader.py  normalize.py  plugin.py  tape_recorder.py  tools.py
contrib/bubseek-langchain/src/bubseek_langchain/examples/: __init__.py  minimal_runnable.py
contrib/bubseek-langchain/tests/: conftest.py  test_agent_protocol.py  test_config.py  test_deepagents.py  test_loader.py  test_minimal_example.py  test_normalize.py  test_plugin.py  test_tools.py
contrib/bubseek-marimo/: README.md  pyproject.toml
contrib/bubseek-marimo/scripts/: verify_marimo.sh
contrib/bubseek-marimo/src/bub_skills/marimo/: SKILL.md  __init__.py
contrib/bubseek-marimo/src/bubseek_marimo/: __init__.py  channel.py  dashboard.py  notebooks.py  plugin.py
contrib/bubseek-marimo/src/bubseek_marimo/templates/: dashboard.py  example_visualization.py  index.py
contrib/bubseek-marimo/src/skills/marimo/: SKILL.md
contrib/bubseek-marimo/src/skills/marimo/references/: marimo-conventions.md
contrib/bubseek-marimo/tests/: test_marimo_e2e.py
contrib/bubseek-schedule/: README.md  pyproject.toml
contrib/bubseek-schedule/src/bubseek_schedule/: __init__.py  jobs.py  jobstore.py  plugin.py  tools.py
contrib/bubseek-schedule/src/tests/: test_bubseek_schedule.py
contrib/insights/: dashboard.py  example_visualization.py  index.py
development/: index.html
docs/: api-reference.md  architecture.md  configuration.md  development.md  getting-started.md  index.md  modules.md
examples/langchain/: README.md  deepagents_dashscope.py  minimal_runnable.py  remote_agent_protocol.py
getting-started/: index.html
insights/: dashboard.py  index.py  minimum_dataset_analysis.py  schedule_kanban.py  tape_monitor.py
scripts/: create-bub-db.py  query_apscheduler_jobs.py
search/: search_index.json
skills/: README.md
skills/github-repo-cards/: SKILL.md
skills/github-repo-cards/scripts/: gh_repo_card.py  gh_trending_card.py
src/bub_skills/bubseek-bootstrap/: SKILL.md
src/bub_skills/bubseek-refactor/: SKILL.md
src/bubseek/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  database.py  oceanbase.py  settings.py
src/skills/github-repo-cards/: SKILL.md
src/skills/github-repo-cards/scripts/: gh_repo_card.py  gh_trending_card.py
tests/: test_bubseek.py  test_foo.py
