[project]
name = "bubseek"
version = "0.0.1"
description = "Intelligent Perception and Explainable Analytics in Collaboration ｜ Bub & seekdb Inside"
authors = [{ name = "Chojan Shang", email = "psiace@apache.org" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bub",
    "republic>=0.5.4",
    "typer>=0.12.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "bub-feishu",
    "bub-web-search",
    "bub-tapestore-sqlalchemy",
    "pyobvector>=0.2.22",
    "bubseek-schedule",
]

[project.urls]
Homepage = "https://psiace.github.io/bubseek/"
Repository = "https://github.com/psiace/bubseek"
Documentation = "https://psiace.github.io/bubseek/"

[project.scripts]
bubseek = "bubseek.__main__:main"

[project.entry-points."bub"]
oceanbase-dialect = "bubseek.oceanbase:register"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",

    "ty>=0.0.14",

    "ruff>=0.14.14",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "src/bubseek",
    "src/bub_skills",
]

# Lock file is always resolved against PyPI. For faster install during dev, use:
#   UV_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple uv sync
[tool.uv]
index-url = "https://pypi.org/simple"

[tool.uv.sources]
bub = { git = "https://github.com/bubbuild/bub.git" }
bub-feishu = { git = "https://github.com/bubbuild/bub-contrib.git", subdirectory = "packages/bub-feishu" }
bub-web-search = { git = "https://github.com/bubbuild/bub-contrib.git", subdirectory = "packages/bub-web-search" }
bub-tapestore-sqlalchemy = { git = "https://github.com/bubbuild/bub-contrib.git", subdirectory = "packages/bub-tapestore-sqlalchemy" }
bubseek-schedule = { workspace = true }

[tool.uv.workspace]
members = [
    "contrib/bubseek-schedule",
]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests", "contrib/bubseek-schedule/src/tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"contrib/*/src/tests/*" = ["S101"]
"contrib/*/src/**/*.py" = ["TRY003"]

[tool.ruff.format]
preview = true
