[project]
name = "bub-schedule-sqlalchemy"
version = "0.1.0"
description = "A standard Bub scheduling plugin backed by APScheduler SQLAlchemy job stores"
authors = [{ name = "Chojan Shang", email = "psiace@apache.org" }]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "bub",
    "loguru",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0",
]

[project.entry-points.bub]
schedule = "bub_schedule_sqlalchemy.plugin:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
includes = ["src/bub_schedule_sqlalchemy"]
