[project]
name = "bubseek-dingtalk"
version = "0.1.0"
description = "DingTalk channel for Bub"
readme = "README.md"
authors = [{ name = "Chojan Shang", email = "psiace@apache.org" }]
requires-python = ">=3.12"
dependencies = [
    "bub",
    "dingtalk-stream>=0.24.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.entry-points."bub"]
dingtalk = "bubseek_dingtalk.plugin"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
includes = ["src/bubseek_dingtalk"]
